--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -36,19 +36,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="First View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="112" y="312" width="151" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="90" y="363" width="195" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AwT-4R-Ivr">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -56,13 +43,77 @@
                                     <navigationItem title="Title" id="Ycf-mx-AD3"/>
                                 </items>
                             </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYp-uF-XX6">
+                                <rect key="frame" x="319" y="80" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="K0L-It-5Pp"/>
+                                    <constraint firstAttribute="width" constant="40" id="egc-yP-RZo"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="icons8-qr-code-filled-40"/>
+                                <connections>
+                                    <action selector="onBillQrCodeClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Z7l-Li-Buv"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bill No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Yot-00-lWu">
+                                <rect key="frame" x="16" y="80" width="296" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="kmb-Kc-D6u"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="SLl-qv-pZy"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dho-LC-KoT">
+                                <rect key="frame" x="319" y="137" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="1la-BJ-cMN"/>
+                                    <constraint firstAttribute="width" constant="40" id="J3h-ly-FzS"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="icons8-qr-code-filled-40"/>
+                                <connections>
+                                    <action selector="onPAQRCodeClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="pBl-Bz-aqb"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PA No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bdv-iI-ctg">
+                                <rect key="frame" x="16" y="137" width="296" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="4Am-b0-0PX"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="U6P-FF-NHo"/>
+                                </connections>
+                            </textField>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ncr-PL-WL2">
+                                <rect key="frame" x="0.0" y="185" width="375" height="433"/>
+                            </webView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="LRD-mx-ttT">
+                                <rect key="frame" x="177" y="391" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="Ncr-PL-WL2" secondAttribute="trailing" id="11Y-1f-vAC"/>
+                            <constraint firstItem="Ncr-PL-WL2" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="1DO-Gm-U1X"/>
+                            <constraint firstItem="Yot-00-lWu" firstAttribute="centerY" secondItem="ZYp-uF-XX6" secondAttribute="centerY" id="4cq-uF-hFi"/>
+                            <constraint firstItem="Dho-LC-KoT" firstAttribute="leading" secondItem="bdv-iI-ctg" secondAttribute="trailing" constant="7" id="5Ti-XP-rba"/>
+                            <constraint firstItem="LRD-mx-ttT" firstAttribute="centerY" secondItem="Ncr-PL-WL2" secondAttribute="centerY" id="5k0-Wk-YQ3"/>
+                            <constraint firstItem="Dho-LC-KoT" firstAttribute="top" secondItem="ZYp-uF-XX6" secondAttribute="bottom" constant="17" id="I9W-It-iOx"/>
+                            <constraint firstItem="Ncr-PL-WL2" firstAttribute="top" secondItem="Dho-LC-KoT" secondAttribute="bottom" constant="8" id="Mft-f7-LRw"/>
+                            <constraint firstItem="ZYp-uF-XX6" firstAttribute="leading" secondItem="Yot-00-lWu" secondAttribute="trailing" constant="7" id="T78-IK-eZz"/>
+                            <constraint firstItem="bdv-iI-ctg" firstAttribute="centerY" secondItem="Dho-LC-KoT" secondAttribute="centerY" id="UVp-2J-1bx"/>
+                            <constraint firstItem="Yot-00-lWu" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="UgH-Xa-0MG"/>
+                            <constraint firstItem="ZYp-uF-XX6" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="16" id="Zy1-Pe-TRJ"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="Dho-LC-KoT" secondAttribute="trailing" constant="16" id="iVY-hw-G1I"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="Ncr-PL-WL2" secondAttribute="bottom" id="krs-J4-5os"/>
+                            <constraint firstItem="LRD-mx-ttT" firstAttribute="centerX" secondItem="Ncr-PL-WL2" secondAttribute="centerX" id="l1N-f1-dA2"/>
+                            <constraint firstItem="bdv-iI-ctg" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="nzg-DS-daV"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="ZYp-uF-XX6" secondAttribute="trailing" constant="16" id="yQz-fb-0Bn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
@@ -76,10 +127,16 @@
                             <barButtonItem title="Status" id="3ot-vf-P7b"/>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="mFieldBillNo" destination="Yot-00-lWu" id="bHC-ry-swy"/>
+                        <outlet property="mFieldPANO" destination="bdv-iI-ctg" id="6cT-53-eLS"/>
+                        <outlet property="mIndicator" destination="LRD-mx-ttT" id="LJH-y4-cMl"/>
+                        <outlet property="mWebView" destination="Ncr-PL-WL2" id="87c-aL-Ee9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1444" y="-331"/>
+            <point key="canvasLocation" x="1444" y="-331.48425787106447"/>
         </scene>
         <!--Sales Edge-->
         <scene sceneID="wg7-f3-ORb">
@@ -153,6 +210,7 @@
     <resources>
         <image name="first" width="30" height="30"/>
         <image name="ic_more_horiz" width="24" height="24"/>
+        <image name="icons8-qr-code-filled-40" width="40" height="40"/>
         <image name="second" width="30" height="30"/>
     </resources>
 </document>
