--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -11,11 +11,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Scan Master-->
         <scene sceneID="fc1-Al-LDm">
             <objects>
                 <navigationController id="PRA-hX-b79" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="first" id="kD2-2g-BF1"/>
+                    <tabBarItem key="tabBarItem" title="Scan Master" image="first" id="kD2-2g-BF1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Wr-2S-VFt">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bill No" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Yot-00-lWu">
-                                <rect key="frame" x="16" y="80" width="296" height="40"/>
+                                <rect key="frame" x="16" y="80" width="249" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kmb-Kc-D6u"/>
                                 </constraints>
@@ -95,6 +95,21 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="LRD-mx-ttT">
                                 <rect key="frame" x="177" y="391" width="20" height="20"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mns-42-JeD">
+                                <rect key="frame" x="272" y="80" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="BVy-zi-AAq"/>
+                                    <constraint firstAttribute="height" constant="40" id="zCt-O1-pCr"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="icons8-相机-40"/>
+                                <connections>
+                                    <action selector="onBtnTakePhotoClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Hmr-at-soD"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qn4-1r-bml">
+                                <rect key="frame" x="44" y="207" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -103,9 +118,10 @@
                             <constraint firstItem="Yot-00-lWu" firstAttribute="centerY" secondItem="ZYp-uF-XX6" secondAttribute="centerY" id="4cq-uF-hFi"/>
                             <constraint firstItem="Dho-LC-KoT" firstAttribute="leading" secondItem="bdv-iI-ctg" secondAttribute="trailing" constant="7" id="5Ti-XP-rba"/>
                             <constraint firstItem="LRD-mx-ttT" firstAttribute="centerY" secondItem="Ncr-PL-WL2" secondAttribute="centerY" id="5k0-Wk-YQ3"/>
+                            <constraint firstItem="ZYp-uF-XX6" firstAttribute="leading" secondItem="mns-42-JeD" secondAttribute="trailing" constant="7" id="BcD-vA-AuW"/>
                             <constraint firstItem="Dho-LC-KoT" firstAttribute="top" secondItem="ZYp-uF-XX6" secondAttribute="bottom" constant="17" id="I9W-It-iOx"/>
+                            <constraint firstItem="mns-42-JeD" firstAttribute="leading" secondItem="Yot-00-lWu" secondAttribute="trailing" constant="7" id="K7Y-6r-qao"/>
                             <constraint firstItem="Ncr-PL-WL2" firstAttribute="top" secondItem="Dho-LC-KoT" secondAttribute="bottom" constant="8" id="Mft-f7-LRw"/>
-                            <constraint firstItem="ZYp-uF-XX6" firstAttribute="leading" secondItem="Yot-00-lWu" secondAttribute="trailing" constant="7" id="T78-IK-eZz"/>
                             <constraint firstItem="bdv-iI-ctg" firstAttribute="centerY" secondItem="Dho-LC-KoT" secondAttribute="centerY" id="UVp-2J-1bx"/>
                             <constraint firstItem="Yot-00-lWu" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="UgH-Xa-0MG"/>
                             <constraint firstItem="ZYp-uF-XX6" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="16" id="Zy1-Pe-TRJ"/>
@@ -113,6 +129,7 @@
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="Ncr-PL-WL2" secondAttribute="bottom" id="krs-J4-5os"/>
                             <constraint firstItem="LRD-mx-ttT" firstAttribute="centerX" secondItem="Ncr-PL-WL2" secondAttribute="centerX" id="l1N-f1-dA2"/>
                             <constraint firstItem="bdv-iI-ctg" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="nzg-DS-daV"/>
+                            <constraint firstItem="mns-42-JeD" firstAttribute="centerY" secondItem="ZYp-uF-XX6" secondAttribute="centerY" id="qDa-PO-4TE"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="ZYp-uF-XX6" secondAttribute="trailing" constant="16" id="yQz-fb-0Bn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
@@ -130,13 +147,14 @@
                     <connections>
                         <outlet property="mFieldBillNo" destination="Yot-00-lWu" id="bHC-ry-swy"/>
                         <outlet property="mFieldPANO" destination="bdv-iI-ctg" id="6cT-53-eLS"/>
+                        <outlet property="mImageView" destination="Qn4-1r-bml" id="wFf-E0-Sv0"/>
                         <outlet property="mIndicator" destination="LRD-mx-ttT" id="LJH-y4-cMl"/>
                         <outlet property="mWebView" destination="Ncr-PL-WL2" id="87c-aL-Ee9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1444" y="-331.48425787106447"/>
+            <point key="canvasLocation" x="1443.5" y="-331.5"/>
         </scene>
         <!--Sales Edge-->
         <scene sceneID="wg7-f3-ORb">
@@ -211,6 +229,7 @@
         <image name="first" width="30" height="30"/>
         <image name="ic_more_horiz" width="24" height="24"/>
         <image name="icons8-qr-code-filled-40" width="40" height="40"/>
+        <image name="icons8-相机-40" width="40" height="40"/>
         <image name="second" width="30" height="30"/>
     </resources>
 </document>
