--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -11,11 +11,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--My-->
+        <scene sceneID="KbD-QW-APG">
+            <objects>
+                <navigationController id="ygn-HJ-6jG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="My" image="ic_account_box" id="Cv5-qc-Cnc"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e34-v1-RTW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="coJ-te-5S9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="532" y="-1077"/>
+        </scene>
         <!--Scan Master-->
         <scene sceneID="fc1-Al-LDm">
             <objects>
                 <navigationController id="PRA-hX-b79" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Scan Master" image="first" id="kD2-2g-BF1"/>
+                    <tabBarItem key="tabBarItem" title="Scan Master" image="qrcode-scan" id="kD2-2g-BF1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Wr-2S-VFt">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -106,10 +120,6 @@
                                     <action selector="onBtnTakePhotoClick:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Hmr-at-soD"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qn4-1r-bml">
-                                <rect key="frame" x="44" y="207" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -145,7 +155,6 @@
                     <connections>
                         <outlet property="mFieldBillNo" destination="Yot-00-lWu" id="bHC-ry-swy"/>
                         <outlet property="mFieldPANO" destination="bdv-iI-ctg" id="6cT-53-eLS"/>
-                        <outlet property="mImageView" destination="Qn4-1r-bml" id="wFf-E0-Sv0"/>
                         <outlet property="mStateBarItem" destination="3ot-vf-P7b" id="3w7-BI-gUm"/>
                         <outlet property="mWebView" destination="Ncr-PL-WL2" id="87c-aL-Ee9"/>
                     </connections>
@@ -176,7 +185,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="PA" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="PA" image="ic_language" id="cPa-gy-q4n"/>
                     <navigationItem key="navigationItem" title="Sales Edge" id="Wcv-nf-yGZ"/>
                     <connections>
                         <outlet property="mWebView" destination="Wds-k7-9JY" id="Cjh-bT-Jd5"/>
@@ -214,8 +223,9 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="gZM-sU-ixU"/>
-                        <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="oAb-Gd-0y8"/>
+                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="JfH-U8-YpS"/>
+                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="B6r-AU-Peu"/>
+                        <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="gND-Gq-yyH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -224,10 +234,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
+        <image name="ic_account_box" width="24" height="24"/>
+        <image name="ic_language" width="24" height="24"/>
         <image name="ic_more_horiz" width="24" height="24"/>
         <image name="icons8-qr-code-filled-40" width="40" height="40"/>
         <image name="icons8-相机-40" width="40" height="40"/>
-        <image name="second" width="30" height="30"/>
+        <image name="qrcode-scan" width="24" height="24"/>
     </resources>
 </document>
