--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wds-k7-9JY">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
@@ -230,7 +230,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="PA" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="PA" image="ic_language" id="cPa-gy-q4n"/>
                     <navigationItem key="navigationItem" title="PA" id="Wcv-nf-yGZ"/>
                     <connections>
                         <outlet property="mWebView" destination="Wds-k7-9JY" id="Cjh-bT-Jd5"/>
@@ -238,24 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1298" y="441"/>
-        </scene>
-        <!--PA-->
-        <scene sceneID="ywH-Pw-2ho">
-            <objects>
-                <navigationController id="MPa-G9-f43" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="PA" image="ic_language" id="irA-YK-sIj"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R4i-Id-MlL">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="2oj-gI-H3s"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="d3Z-Q1-R2Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="532" y="442"/>
+            <point key="canvasLocation" x="634" y="447"/>
         </scene>
         <!--Sales Edge-->
         <scene sceneID="yl2-sM-qoP">
@@ -270,7 +253,7 @@
                     <connections>
                         <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="2HU-IR-cB8"/>
                         <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="nvC-wP-7dU"/>
-                        <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="LHl-vX-M0y"/>
+                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="OfI-0A-FFQ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
